--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     const clientWidth = document.documentElement.clientWidth
     const clientHeight = document.documentElement.clientHeight
     // 判断页面宽高
-    const pageWidth = clientWidth / clientHeight > 16 / 9 ? clientHeight * (16 / 9) : clientWidth
+    window.pageWidth = clientWidth / clientHeight > 16 / 9 ? clientHeight * (16 / 9) : clientWidth
     const pageHeight = pageWidth / (16 / 9)
     const string = `<style>html{
       font-size: ${pageWidth / 100}px
